fix: adapt MySql commit to Java 17